[gd_scene load_steps=14 format=3 uid="uid://dehbiymvw4gq5"]

[ext_resource type="Script" uid="uid://baxm1vpvlaqw2" path="res://scripts/Main Menu/main_menu.gd" id="1_jk1qb"]
[ext_resource type="Script" uid="uid://duu3dx0n1l1gg" path="res://scripts/Main Menu/menu_board.gd" id="1_rtw2f"]
[ext_resource type="Script" uid="uid://q3ayn1o0618v" path="res://scripts/Card/card_manager.gd" id="2_oa1go"]
[ext_resource type="PackedScene" uid="uid://iv3w3pu8flf7" path="res://scenes/Card/card_pack.tscn" id="3_tbmy8"]
[ext_resource type="Script" uid="uid://dcaf113x8c28p" path="res://scripts/Card/player_hand.gd" id="4_jk1qb"]
[ext_resource type="Script" uid="uid://bcpbmavb3hrg1" path="res://scripts/Main Menu/menu_pack.gd" id="4_oa1go"]
[ext_resource type="Shader" uid="uid://ya516xim3sm" path="res://shader/dissolve_shader.tres" id="5_5dd4i"]
[ext_resource type="PackedScene" uid="uid://b43u6wsxnq4ai" path="res://scenes/input_manager.tscn" id="6_oa1go"]
[ext_resource type="Script" uid="uid://vx565sl7wiij" path="res://scripts/stats_manager.gd" id="8_jk1qb"]
[ext_resource type="Script" uid="uid://bvoajtpxmv7lr" path="res://scripts/Main Menu/menu_logic.gd" id="9_jk1qb"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_o731e"]
frequency = 0.0017

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_va8pk"]
noise = SubResource("FastNoiseLite_o731e")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lgwnu"]
resource_local_to_scene = true
shader = ExtResource("5_5dd4i")
shader_parameter/Noise = SubResource("NoiseTexture2D_va8pk")
shader_parameter/DissolveValue = 1.0

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jk1qb")

[node name="Board" type="Node2D" parent="."]
position = Vector2(200, 700)
script = ExtResource("1_rtw2f")

[node name="Highlights" type="TileMapLayer" parent="Board"]

[node name="TerrainActual" type="TileMapLayer" parent="Board"]

[node name="Timer" type="Timer" parent="Board"]
wait_time = 0.75
one_shot = true

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("2_oa1go")

[node name="CardPack" parent="CardManager" instance=ExtResource("3_tbmy8")]
material = SubResource("ShaderMaterial_lgwnu")
position = Vector2(814, 478)
script = ExtResource("4_oa1go")

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("4_jk1qb")

[node name="InputManager" parent="." instance=ExtResource("6_oa1go")]

[node name="StatsManager" type="Node2D" parent="."]
script = ExtResource("8_jk1qb")

[node name="MenuLogic" type="Node2D" parent="."]
script = ExtResource("9_jk1qb")

[connection signal="timeout" from="Board/Timer" to="Board" method="_on_timer_timeout"]
